--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "@react-oauth/google": "^0.11.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gapi-script": "^1.2.0",
-    "i": "^0.3.7",
     "neumorphism-react": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -53,6 +53,10 @@
   },
   "devDependencies": {
     "eslint": "^8.42.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "7.30.1",
     "eslint-plugin-storybook": "^0.6.12",
     "react-router-dom": "^6.11.2"
   }
