--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gapi-script": "^1.2.0",
+    "json-server": "^0.17.3",
     "neumorphism-react": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
