changes in paper to box

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_GOOGLE_CLIENT_ID = '768737600073-dnuqr72j98ibj57joe2pos47pvnjuql9.apps.googleusercontent.com'
+process.env.REACT_APP_BASE_URL='http://localhost:5000/'
